--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <h1>Bem Vindo(a) a Biblioteca</h1>
     <br>
     <br>
-	<button onclick="biblioteca()">biblioteca</button>
+    <button id="botao_da_biblioteca" class="btn btn-primary" onclick="addUser()">biblioteca</button>
     <br>
 </center>
-<script src=""></script>
+<script src="index.js"></script>
 </body>
 </html>
